--- a/Resources/log4j.properties
+++ b/Resources/log4j.properties
@@ -1,6 +1,8 @@
 # priority  :debug<info<warn<error
 #you cannot specify every priority with different file for log4j
 log4j.rootLogger=debug,stdout,info,debug,warn,error 
+log4j.logger.io.netty=INFO
+log4j.logger.io.lettuce=INFO
 
 #console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
