--- a/Resources/log4j.properties
+++ b/Resources/log4j.properties
@@ -17,7 +17,7 @@ log4j.appender.info.File=./output/log/info.log
 log4j.appender.info.Append=false
 log4j.appender.info.Threshold=INFO
 log4j.appender.info.layout=org.apache.log4j.PatternLayout 
-log4j.appender.info.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH:mm:ss}] [Thread: %t] [Class:%c >> Method: %l]%n%m%n
+log4j.appender.info.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH:mm:ss,SSS}] [Thread: %t] [Class:%c >> Method: %l]%n%m%n
 #debug log
 log4j.logger.debug=debug
 log4j.appender.debug=org.apache.log4j.DailyRollingFileAppender 
@@ -26,7 +26,7 @@ log4j.appender.debug.File=./output/log/debug.log
 log4j.appender.debug.Append=false
 log4j.appender.debug.Threshold=DEBUG
 log4j.appender.debug.layout=org.apache.log4j.PatternLayout 
-log4j.appender.debug.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH:mm:ss}] [Thread: %t] [Class:%c >> Method: %l]%n%m%n
+log4j.appender.debug.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH:mm:ss,SSS}] [Thread: %t] [Class:%c >> Method: %l]%n%m%n
 #warn log
 log4j.logger.warn=warn
 log4j.appender.warn=org.apache.log4j.DailyRollingFileAppender 
@@ -35,7 +35,7 @@ log4j.appender.warn.File=./output/log/warn.log
 log4j.appender.warn.Append=false
 log4j.appender.warn.Threshold=WARN
 log4j.appender.warn.layout=org.apache.log4j.PatternLayout 
-log4j.appender.warn.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH:mm:ss}] [Thread: %t] [Class:%c >> Method: %l]%n%m%n
+log4j.appender.warn.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH:mm:ss,SSS}] [Thread: %t] [Class:%c >> Method: %l]%n%m%n
 #error
 log4j.logger.error=error
 log4j.appender.error = org.apache.log4j.DailyRollingFileAppender
@@ -44,4 +44,4 @@ log4j.appender.error.File = ./output/log/error.log
 log4j.appender.error.Append = false
 log4j.appender.error.Threshold = ERROR 
 log4j.appender.error.layout = org.apache.log4j.PatternLayout
-log4j.appender.error.layout.ConversionPattern = [%p] [%d{yyyy-MM-dd HH:mm:ss}] [Thread: %t] [Class:%c >> Method: %l]%n%m%n
+log4j.appender.error.layout.ConversionPattern = [%p] [%d{yyyy-MM-dd HH:mm:ss,SSS}] [Thread: %t] [Class:%c >> Method: %l]%n%m%n
